# StochasticBlock

./: CHANGELOG.md  CMakeLists.txt  README.md  makefile
cmake/: StochasticBlockConfig.cmake.in
include/: StochasticBlock.h
src/: StochasticBlock.cpp
test/: CMakeLists.txt  makefile  test.cpp
